wrap main section in main tag, adjust console jQuery and css to prevent 'things ive built' section from creeping up

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .about-me {
-  display: none;
+  visibility: hidden;
   max-width: 800px;
   font-family: 'Montserrat', sans-serif;
   color: white;
